@@ -16,40 +16,35 @@ HOL_Carrier_Production = {
 	visible = { has_completed_focus = HOL_Carrier_Development }
 }
 HOL_Influence_Flanders = {
-	icon = decision_category_spread_the_seeds_of_revolution
-	picture = HOL_flanders_map
-	scripted_gui = HOL_flanders_influence_gui
-
-	priority = 1000
-
 	allowed = {
 		OR = {
 			tag = HOL
 			tag = BEL
 		}
 	}
+	icon = decision_category_spread_the_seeds_of_revolution
+	picture = HOL_flanders_map
+	scripted_gui = HOL_flanders_influence_gui
+
+	priority = 1000
 	visible = {
-		OR = {
-			tag = HOL
-			tag = BEL
-		}
 		HOL = { has_completed_focus = HOL_increase_corporation_vlaanderen }
 		HOL = { NOT = { has_completed_focus = HOL_cultural_unification_vlaanderen } }
 	}
 }
 HOL_VOC_category = {
+	allowed = { original_tag = HOL }
 	icon = decision_category_intervention_overseas
 
 	priority = 1000
-	allowed = { original_tag = HOL }
 	visible = { has_completed_focus = HOL_VOC }
 	visible_when_empty = yes
 }
 HOL_VOC_category_ind = {
+	allowed = { original_tag = IND }
 	icon = concessions_category
 
 	priority = 1000
-	allowed = { original_tag = IND }
 	visible = {
 		HOL = {
 			OR = {
@@ -60,10 +55,10 @@ HOL_VOC_category_ind = {
 	}
 }
 HOL_WIC_category = {
+	allowed = { original_tag = HOL }
 	icon = decision_category_intervention_overseas
 
 	priority = 1000
-	allowed = { original_tag = HOL }
 	visible = { has_completed_focus = HOL_WIC }
 	visible_when_empty = yes
 }
