@@ -378,8 +378,7 @@ ideas = {
 			}
 		}
 		SMA_army_of_sacred_marino = {
-
-			picture = stake_on_army
+			picture = infantry_bonus
 
 			allowed_civil_war = { always = yes }
 
