@@ -38,23 +38,25 @@ Flanders_Mechanic_Flanders_more_productive_then_Wallonia = {
 Flanders_Mechanic_Flanders_Pro_Dutch_Parties_in_power = {
 	BEL = {
 		OR = {
-		western_liberals_are_in_power = yes
-		nationalist_right_wing_populists_are_in_power = yes
+			western_liberals_are_in_power = yes
+			nationalist_right_wing_populists_are_in_power = yes
 		}
 	}
 }
 Flanders_Mechanic_Flanders_Pro_Dutch_Parties_in_coalition = {
 	BEL = {
 		OR = {
-		western_liberals_are_in_coalition = yes
-		nationalist_right_wing_populists_are_in_coalition = yes
+			western_liberals_are_in_coalition = yes
+			nationalist_right_wing_populists_are_in_coalition = yes
 		}
 	}
 }
 Flanders_Mechanic_High_Dutch_Influence_In_Belgium = {
 	BEL = {
-		HOL = {
-			is_top3_influencer = yes
+		OR = {
+			check_variable = { influence_array^0 = HOL.id }
+			check_variable = { influence_array^1 = HOL.id }
+			check_variable = { influence_array^2 = HOL.id }
 		}
 	}
 	HOL = { has_completed_focus = HOL_increase_corporation_vlaanderen }
