@@ -3765,13 +3765,13 @@
  HOL_flanders_trigger_true: "§GActive§!"
  HOL_flanders_trigger_false: "§RInactive§!"
  HOL_flanders_trigger_1_tt: "§Y[FLN.GetNameWithFlag]§! Highest Productivity: [HOL_Flanders_Mechanic_Trigger_1]"
- HOL_flanders_trigger_1_tooltip: "Grands [HOL.GetFlag]§G5§! Prominence per month if Vlaanderen state productivity is higher than Wallonie"
+ HOL_flanders_trigger_1_tooltip: "Grants [HOL.GetFlag]§G5§! Prominence per month if Vlaanderen state productivity is higher than Wallonie"
  HOL_flanders_trigger_2_tt: "Pro-§Y[HOL.GetAdjectiveCap]§! Party in Coalition in §Y[BEL.GetNameWithFlag]§!: [HOL_Flanders_Mechanic_Trigger_2]"
- HOL_flanders_trigger_2_tooltip: "Grands [HOL.GetFlag]§G2§! Prominence per month if N-VA or Vlaams Blok is in power in §Y[BEL.GetNameWithFlag]§!"
+ HOL_flanders_trigger_2_tooltip: "Grants [HOL.GetFlag]§G2§! Prominence per month if N-VA or Vlaams Blok is in power in §Y[BEL.GetNameWithFlag]§!"
  HOL_flanders_trigger_3_tt: "Pro-§Y[HOL.GetAdjectiveCap]§! Party in Power in §Y[BEL.GetNameWithFlag]§!: [HOL_Flanders_Mechanic_Trigger_3]"
- HOL_flanders_trigger_3_tooltip: "Grands [HOL.GetFlag]§G5§! Prominence per month if N-VA or Vlaams Blok is in Coalition in §Y[BEL.GetNameWithFlag]§!"
+ HOL_flanders_trigger_3_tooltip: "Grants [HOL.GetFlag]§G5§! Prominence per month if N-VA or Vlaams Blok is in Coalition in §Y[BEL.GetNameWithFlag]§!"
  HOL_flanders_trigger_4_tt: "§Y[HOL.GetAdjectiveCap]§! Top 3 Influencers in §Y[BEL.GetNameWithFlag]§!: [HOL_Flanders_Mechanic_Trigger_4]"
- HOL_flanders_trigger_4_tooltip: "Grands [HOL.GetFlag]§G5§! Prominence per month if §Y[HOL.GetNameWithFlag]§! is top 3 influencer in §Y[BEL.GetNameWithFlag]§!"
+ HOL_flanders_trigger_4_tooltip: "Grants [HOL.GetFlag]§G5§! Prominence per month if §Y[HOL.GetNameWithFlag]§! is top 3 influencer in §Y[BEL.GetNameWithFlag]§!"
  HOL_nato_not_active_key1: "For decades, the Netherlands has relied on foreign nations for military equipment and logistical support. This dependency has left our armed forces unable to function independently, creating a dangerous vulnerability in the face of modern threats."
  HOL_nato_active_key1: "While the Netherlands benefits from strong international partnerships, we remain heavily reliant on foreign allies for military equipment and supplies. This reliance limits our independence and poses a significant risk in the event of strained relationships."
  HOL_nato_not_active_key2: "The lack of self-sufficient military production has created a critical situation. Equipment shortages and operational deficiencies are threatening the readiness of our armed forces, leaving the Netherlands vulnerable to prolonged or large-scale conflict."
