@@ -362,8 +362,8 @@
  SMA_recruits_desc: "San Marino has a compulsory army. Because of this, we have poorly trained soldiers, most of whom are not willing to risk their lives for their country. But... there are many of them."
  SMA_contract_service: "Contract Service"
  SMA_contract_service_desc: "San Marino has a contract army. Because of this, we have well-trained soldiers who are ready to go to the bitter end in defense of our great country."
- SMA_army_of_sacred_marino: "Army Of The San-Marino"
- SMA_army_of_sacred_marino_desc: "We are the oldest country in Europe, our history begins in 301 B.C. and will go to the end of the world. We are a great and proud people who have never lost and will never lose our independence! We are the inhabitants of mountainous San Marino, we will bring our country and ourselves to glory and greatness!"
+ SMA_army_of_sacred_marino: "The Army of San Marino"
+ SMA_army_of_sacred_marino_desc: "Founded in 301 A.D., we are the oldest republic in Europe. For over seventeen centuries, our mountainous homeland has remained unconquered, our independence unbroken. We are a proud people with an enduring legacy—and now, the Army of San Marino shall carry that legacy into a new era of strength and glory."
  SMA_loyal_army: "Loyal Army"
  SMA_loyal_army_desc: "After the purges, in San Marino, the army fully supports the government. Glory to the Great Country!"
 
