@@ -317,6 +317,7 @@ v2.0.0
   - Fixed Iraqi civil war tags not being properly setup on release
   - Iraq can no longer vote to join the invasion against itself in the post 9/11 content
   - Fixed a display issue with the Arab Spring not showing you the government popularity impact on the growth of the Arab Spring
+  - Fixed a screwed up trigger for the "Prominence in Flanders" decisions for the Dutch mechanic not properly switching to toggled
 
  Content:
   - [RAJ] Added new Naxalite-Maoist insurgency mechanics (Issue #330)
